--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tgf789.github.io/jira/",
+  "homepage": "https://tgf789.github.io/jira",
   "name": "jiratoupmu",
   "private": true,
   "version": "0.0.0",
