--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "numfmt": "^3.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
